tests/arch/mips/error/executor/test_mips_error_executor_009.s

#
# Creator (https://creatorsim.github.io/creator/)
#

.text
main:
	
	li $zero, 10
    jr $ra
